--- a/src/Components/Button/button-component.css
+++ b/src/Components/Button/button-component.css
@@ -1,10 +1,7 @@
 .btn {
   border-radius: 19px;
   border: 0;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding: 4px 20px;
   color: white;
   margin-left: 10px;
 }
