--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 #root {
   margin: 0 auto;
   padding: 1rem;
+  padding-top: 3.963rem;
+  padding-left: 6.25rem;
+  padding-right: 6.25rem;
   font-family: "sf-pro";
 }
