--- a/src/Components/Button/button-component.css
+++ b/src/Components/Button/button-component.css
@@ -11,9 +11,41 @@
   cursor: pointer;
 }
 
+.btn-primarybig {
+  background-color: #378972;
+  width: 9.375rem;
+  height: 2.625rem;
+  cursor: pointer;
+  border-radius: 30px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+
 .btn-secondary {
   border: 1.5px solid #378972;
   background-color: white;
   color: #378972;
   cursor: pointer;
+  width: 198px;
+height: 45px;
+transition: 0.3s;
+}
+
+.btn-secondary:hover{
+  background-color: #378972;
+  color: white;
+}
+.btn-secondarylearn:hover{
+  background-color: #378972;
+  color: white;
+}
+
+.btn-secondarylearn {
+  border: 1.5px solid #378972;
+  background-color: white;
+  color: #378972;
+  cursor: pointer;
+  width: 300px;
+height: 45px;
+transition: 0.3s;
 }
