--- a/src/Components/HomeComponent/home-component.css
+++ b/src/Components/HomeComponent/home-component.css
@@ -1,7 +1,7 @@
 .emailbox {
   width: 542px;
   height: 108px;
-  background-color: #f3f3f3;
+  
 }
 body {
   margin: 0%;
@@ -12,6 +12,16 @@ body {
   width: 55px;
   height: 55px;
   background: #378972;
+}
+
+#box-homepage{
+  background: #F3F3F3;
+  box-shadow: 0px 58px 45px -42px rgba(0, 0, 0, 0.25);
+border-radius: 8px;
+}
+#homeparagraf{
+  width: 552px;
+  text-align: justify;
 }
 
 .text {
