--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@
   padding-top: 3.963rem;
   padding-left: 6.25rem;
   padding-right: 6.25rem;
-  font-family: "sf-pro";
+  font-family: "Montserrat";
 }
