--- a/src/Components/Button/button-component.css
+++ b/src/Components/Button/button-component.css
@@ -1,5 +1,5 @@
 .btn {
-  border-radius: 19px;
+  border-radius: 45px;
   border: 0;
   padding: 4px 20px;
   color: white;
@@ -9,15 +9,25 @@
 .btn-primary {
   background-color: #378972;
   cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn-primary:hover{
+  background-color: #49B194;
 }
 
 .btn-primarybig {
   background-color: #378972;
-  width: 9.375rem;
+  width:60%;
   height: 2.625rem;
   cursor: pointer;
   border-radius: 30px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+  transition: 0.3s;
+}
+
+.btn-primarybig:hover{
+  background-color: #49B194;
 }
 
 
