--- a/src/Components/HomeComponent/home-component.css
+++ b/src/Components/HomeComponent/home-component.css
@@ -16,11 +16,11 @@ body {
 
 #box-homepage{
   background: #F3F3F3;
-  box-shadow: 0px 58px 45px -42px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 48px 45px -42px rgba(0, 0, 0, 0.5);
 border-radius: 8px;
 }
 #homeparagraf{
-  width: 552px;
+  width: 34.5rem;
   text-align: justify;
 }
 
@@ -38,4 +38,9 @@ border-radius: 8px;
 
 .horizontal-line-color {
   color: #acacac;
+}
+
+.fotodoctor{
+  width: 85%;
+  height: 45%;
 }
