--- a/src/Components/Navbar/navbar-component.css
+++ b/src/Components/Navbar/navbar-component.css
@@ -12,3 +12,13 @@
     justify-content: center;
 }
 
+.navbar-links{
+  text-decoration: underline white 2.5px ;
+  text-underline-offset: 8px;
+  transition: 0.7s;
+}
+.navbar-links:hover{
+  text-decoration: underline #7AC5C8 2.5px ;
+  text-underline-offset: 8px;
+
+}
