--- a/src/Components/OurServices/ourservices-component.css
+++ b/src/Components/OurServices/ourservices-component.css
@@ -1,18 +1,80 @@
 .OurServices {
-  min-height: 100vh;
+  min-height: 65vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.card {
-  width: 288.26px;
+.ourservices-container >h1{
+ color: #378972;
+ text-align: center;
+ font-size: 38px;
+ font-weight: bold;
+}
+
+.card1 {
+  width: 278.26px;
   height: 5%;
   text-align: justify;
   padding: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 10px;
   align-items: center;
+  margin-right: 50px;
+}
+
+.card1v2 {
+  width: 278.26px;
+  height: 5%;
+  text-align: justify;
+  padding: 10px;
+  box-shadow: 0 2px 4px 0 rgba(122, 197, 200, 1), 0 6px 20px 0 rgba(122, 197, 200, 1);
+  border-radius: 10px;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.card2 {
+  width: 278.26px;
+  height: 5%;
+  text-align: justify;
+  padding: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.card2v2 {
+  width: 278.26px;
+  height: 5%;
+  text-align: justify;
+  padding: 10px;
+  box-shadow: 0 2px 4px 0 rgba(122, 197, 200, 1), 0 6px 20px 0 rgba(122, 197, 200, 1);
+  border-radius: 10px;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.card3 {
+  width: 278.26px;
+  height: 5%;
+  text-align: justify;
+  padding: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+  align-items: center;
+  margin-right: 50px;
+}
+.card3v2 {
+  width: 278.26px;
+  height: 5%;
+  text-align: justify;
+  padding: 10px;
+  box-shadow: 0 2px 4px 0 rgba(122, 197, 200, 1), 0 6px 20px 0 rgba(122, 197, 200, 1);
+  border-radius: 10px;
+  align-items: center;
+  margin-right: 50px;
 }
 
 .imagenservices {
@@ -23,11 +85,17 @@
   padding-bottom: 2px;
   padding-top: 11px;
   font-size: 18px;
-  font-weight: bold;
+  padding-left: 5px;
+  
+  font-weight:800;
+
 }
 
 .para-card {
+  font-size: 15px;
   padding-bottom: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #cardbutton {
