--- a/src/Components/About us/aboutus-component.css
+++ b/src/Components/About us/aboutus-component.css
@@ -1,9 +1,5 @@
-body {
-  margin: 0;
-}
-
 .aboutus-container {
-  margin: 0;
+  margin-bottom: 10%;
   display: flex;
   color: white;
   background-color: #7ac5c8;
