--- a/src/Components/Navbar/navbar-component.css
+++ b/src/Components/Navbar/navbar-component.css
@@ -1,3 +1,7 @@
+* {
+  opacity: 10;
+}
+
 #logoytitulo {
   display: flex;
   justify-content: space-between;
@@ -6,6 +10,53 @@
 #logoytitulo > h1 {
   font-size: 22px;
   font-weight: lighter;
+}
+
+.dropdown-contact {
+  text-align: center;
+  margin-top: 2%;
+  color: #378972;
+  position: absolute;
+  left: 62%;
+  background-color: white;
+  padding-bottom: 1%;
+  border-radius: 7px;
+  padding-right: 1%;
+  padding-left: 1%;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.dropdown-contact > ul > li {
+  margin-bottom: 6%;
+}
+
+#phone {
+  margin-left: 10%;
+}
+
+#first-numer {
+  display: flex;
+  align-items: center;
+}
+
+#second-numer {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-contact > img {
+  margin-bottom: 6%;
+}
+
+#mapline {
+  margin-left: 10%;
+}
+
+.dropdown-contact > h1 {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 3%;
+  margin-top: 6%;
 }
 
 .navbar-container {
