--- a/src/Components/HomeComponent/home-component.css
+++ b/src/Components/HomeComponent/home-component.css
@@ -27,6 +27,15 @@ body {
   margin-left: 15%;
 }
 
+.scrollbutton {
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+.vagina-button {
+  margin-right: 5%;
+}
+
 .text {
   width: 150px;
 }
