--- a/src/Components/Slider/SliderShow.css
+++ b/src/Components/Slider/SliderShow.css
@@ -1,3 +1,7 @@
-.margin-div {
-  margin: 0 20px;
+.div-dimensions {
+  width: 1172.03px;
+  height: 604px;
+  background-color: #c67a98;
+  margin: 0 0px;
+  padding: 0%;
 }
