--- a/src/Components/Slider/SliderShow.css
+++ b/src/Components/Slider/SliderShow.css
@@ -1,7 +1,3 @@
-.div-dimensions {
-  width: 1172.03px;
-  height: 604px;
-  background-color: #c67a98;
-  margin: 0 0px;
-  padding: 0%;
+.div-margins {
+  margin: 0 10%;
 }
