--- a/src/Components/About us/aboutus-component.css
+++ b/src/Components/About us/aboutus-component.css
@@ -6,6 +6,36 @@
   background-color: #7ac5c8;
 }
 
+@media screen and (max-width: 640px) {
+  .img-div {
+    display: none;
+  }
+  #about-para-div {
+    text-align: justify;
+    padding-top: 5%;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding-bottom: 5%;
+  }
+  #about-title {
+    font-size: 25px;
+    text-align: center;
+    text-decoration: underline white 0.5px;
+    text-underline-offset: 15px;
+  }
+  .about-text1 {
+    text-align: justify;
+    padding-top: 5%;
+    margin-left: 20%;
+    height: 100%;
+    padding-right: 10%;
+    padding-left: 10%;
+    margin-right: 10%;
+    width: 50%;
+  }
+}
+
 .aboutpara-div > h1 {
   font-size: 40px;
   text-align: center;
