--- a/src/Components/Button/button-component.css
+++ b/src/Components/Button/button-component.css
@@ -74,6 +74,25 @@
   transition: 0.3s;
 }
 
+.btn-primarybig2 {
+  background-color: #378972;
+  width: 30%;
+  margin-left: 5%;
+  height: 3.1rem;
+  cursor: pointer;
+  border-radius: 30px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+  transition: 0.3s;
+}
+
+@media screen and (max-width: 640px) {
+  .btn-primarybig2 {
+    font-size: 10px;
+    width: auto;
+    display: none;
+  }
+}
+
 .btn-primarybig:hover {
   background-color: #49b194;
 }
@@ -105,4 +124,20 @@
   width: 550px;
   height: 60px;
   transition: 0.3s;
+  margin-top: 10%;
+}
+
+@media screen and (max-width: 640px) {
+  .btn-secondarylearn {
+    width: 90vw;
+    margin: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+  .btn-instagram {
+    padding-left: 4%;
+    padding-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
 }
