--- a/src/Components/Footer/footer-component.css
+++ b/src/Components/Footer/footer-component.css
@@ -33,3 +33,22 @@ footer > h1 {
   margin-top: 1%;
   margin-bottom: 3%;
 }
+
+@media screen and (max-width: 640px) {
+  #footer-title {
+    margin-bottom: 5%;
+  }
+  #footer-para {
+    margin-top: 1%;
+    width: 100%;
+    font-size: 16px;
+    margin: 0;
+  }
+  #linea-footer {
+    margin: 0;
+    margin-bottom: 5%;
+  }
+  .ig-btn-container {
+    margin-right: 30%;
+  }
+}
