--- a/src/Components/HomeComponent/home-component.css
+++ b/src/Components/HomeComponent/home-component.css
@@ -1,3 +1,62 @@
+.home-container {
+  margin: 5%;
+  display: flex;
+}
+
+#home-title {
+  font-size: 4vh;
+  text-align: justify;
+}
+
+.email-container {
+  display: flex;
+  background: #f3f3f3;
+  box-shadow: 0px 58px 45px -42px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  margin-top: 4%;
+  width: auto;
+  align-content: center;
+  justify-content: center;
+  padding: 2%;
+}
+
+.email-icon {
+  margin-right: 1rem;
+}
+
+.left-side {
+  margin-top: 3%;
+  width: 30%;
+}
+
+.right-side {
+  margin-left: 45%;
+}
+
+@media screen and (max-width: 640px) {
+  .left-side {
+    width: 100%;
+  }
+  .home-container {
+    margin: 5%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .right-side {
+    margin-left: 0;
+  }
+  #doctor-img-home {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+  }
+  #doctor-info-home {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+  }
+}
+
 .emailbox {
   width: 542px;
   height: 108px;
